src/objects/MarketingPlanAdjustments__c.object
<CustomObject>
    <description>Marketing Plan Budget Transfers form.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>Dollar amount of the request.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brand_From__c</fullName>
        <formula>TransferringMarketingPlan__r.Brand__r.Name</formula>
        <label>Brand From</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Manager_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Manager From</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Marketing_Plan_Adjustments_and_Transfer1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_Manager_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Manager To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Marketing_Plan_Adjustments_and_Transfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_To__c</fullName>
        <formula>ReceivingMarketingPlan__r.Brand__r.Name</formula>
        <label>Brand To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_From__c</fullName>
        <formula>text(TransferringMarketingPlan__r.Country__c)</formula>
        <label>Country From</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonforRequest__c</fullName>
        <inlineHelpText>Brief description of the reason for the request.</inlineHelpText>
        <label>Reason for Request</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReceivingMarketingPlan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Marketing Plan receiving additional funds.</inlineHelpText>
        <label>Receiving Marketing Plan</label>
        <referenceTo>MarketingPlan__c</referenceTo>
        <relationshipLabel>Marketing Plan Transfers (Receiving Marketing Plan)</relationshipLabel>
        <relationshipName>Marketing_Plan_Adjustments2</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receiving_Marketing_Plan_Owner_Email__c</fullName>
        <description>This email will be triggered to the Marketing Plan Owner receiving transferred funds, in the event of an approval or rejection of funds transfer.</description>
        <label>Receiving Marketing Plan Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Region_From__c</fullName>
        <formula>text(TransferringMarketingPlan__r.Region__c)</formula>
        <label>Region From</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_To__c</fullName>
        <formula>text( ReceivingMarketingPlan__r.Region__c )</formula>
        <label>Region To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestStatusDescription__c</fullName>
        <description>Field used to populate reason for failed processing of adjustment.</description>
        <label>Request Status Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TransferringMPYearHidden__c</fullName>
        <formula>text(TransferringMarketingPlan__r.Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transferring MP Year Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferringMarketingPlan__c</fullName>
        <inlineHelpText>Marketing Plan transferring additional funds.</inlineHelpText>
        <label>Transferring Marketing Plan</label>
        <referenceTo>MarketingPlan__c</referenceTo>
        <relationshipLabel>Marketing Plan Transfers (Transferring Marketing Plan)</relationshipLabel>
        <relationshipName>Marketing_Plan_Transfer</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Within_Same_Brand__c</fullName>
        <formula>if(ReceivingMarketingPlan__r.Brand__r.Name = TransferringMarketingPlan__r.Brand__r.Name, &quot;Yes&quot;,&quot;No&quot;)</formula>
        <label>Within Same Brand?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Within_Same_Region__c</fullName>
        <formula>if( text(TransferringMarketingPlan__r.Region__c) =  text(ReceivingMarketingPlan__r.Region__c),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <label>Within Same Region?</label>
        <type>Text</type>
    </fields>
    <label>Marketing Plan Transfer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TransferringMarketingPlan__c</columns>
        <columns>ReceivingMarketingPlan__c</columns>
        <columns>Amount__c</columns>
        <columns>Request_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MPADJ-{000000}</displayFormat>
        <label>Transfer Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Plan Transfers</pluralLabel>
    <recordTypes>
        <fullName>Creation</fullName>
        <active>true</active>
        <description>Record Type used for initial creation</description>
        <label>Creation</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CannotSubmitRequestForSameMarketingPlan</fullName>
        <active>true</active>
        <description>Cannot submit request if Transferring and Receiving Marketing Plans are the same.</description>
        <errorConditionFormula>TransferringMarketingPlan__c  =  ReceivingMarketingPlan__c</errorConditionFormula>
        <errorMessage>Transferring and Receiving Marketing Plans are the same. Please change one of the fields and submit again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Transfer_Across_Country_Budgets</fullName>
        <active>true</active>
        <description>You cannot request a transfer between budgets that exist within separate countries.</description>
        <errorConditionFormula>text(TransferringMarketingPlan__r.Country__c) &lt;&gt;  text(ReceivingMarketingPlan__r.Country__c)</errorConditionFormula>
        <errorMessage>You cannot request a transfer between Marketing Plan budgets that exist within separate countries.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MarketingPlanCurrenciesMatch</fullName>
        <active>false</active>
        <description>Transferring and Receiving Marketing Plan currencies must match.</description>
        <errorConditionFormula>text(TransferringMarketingPlan__r.CurrencyIsoCode) &lt;&gt;  text(ReceivingMarketingPlan__r.CurrencyIsoCode)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Transferring and Receiving Marketing Plan currencies must match.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequestedCurrencyMatchTransferringMP</fullName>
        <active>false</active>
        <description>Transferring Marketing Plan currency must match the currency on the request.</description>
        <errorConditionFormula>text( CurrencyIsoCode)  &lt;&gt;  text(TransferringMarketingPlan__r.CurrencyIsoCode)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Transferring Marketing Plan currency must match the currency on the request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TransferMustBeGreaterThanZero</fullName>
        <active>true</active>
        <description>Transfer amount must be greater than zero.</description>
        <errorConditionFormula>Amount__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>Transfer amount must be greater than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TransferringMPYearIsNotCurrent</fullName>
        <active>true</active>
        <description>The Year of Transferring Marketing Plan or Receiving Marketing Plan is not the current year.</description>
        <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;System Administrator with Bulk Hard Delete&quot;, 
VALUE((text(TransferringMarketingPlan__r.Year__c) )) &lt; YEAR( TODAY() ))</errorConditionFormula>
        <errorMessage>Year of Transferring Marketing Plan is not the current year</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TransferringMPYearequalsReceivingMPYear</fullName>
        <active>true</active>
        <errorConditionFormula>text(TransferringMarketingPlan__r.Year__c)  &lt;&gt;  text(ReceivingMarketingPlan__r.Year__c)</errorConditionFormula>
        <errorMessage>Year of Transferring Marketing Plan does not equal Year of Receiving Marketing Plan.</errorMessage>
    </validationRules>
</CustomObject>